gcc/testsuite/sarif-replay.dg/2.1.0-invalid/3.33.3-index-out-of-range.sarif
{
    "version": "2.1.0",
    "runs": [
	{
	    "tool": {
		"driver": {
		    "name": "placeholder"
		}
	    },
	    "results": [
		{
		    "message": {"text": "placeholder"},
		    "locations": [
			{
			    "logicalLocations": [
				{
				    "index": 42 // { dg-error "index value 42 is out of range for theRun.logicalLocations \\\[SARIF v2.1.0 ยง3.33.3\\\]" }
				}
			    ]
			}
		    ]
		}
	    ],
	    "logicalLocations": []
	}
    ]
}

/* { dg-begin-multiline-output "" }
In JSON property '/runs/0/results/0/locations/0/logicalLocations/0/index'
   { dg-end-multiline-output "" } */
/* { dg-begin-multiline-output "" }
   17 |                                     "index": 42
      |                                              ^~
   { dg-end-multiline-output "" } */
